tests/ui/unused_must_use.stderr
error: unused return value of `Foo::new` that must be used
  --> tests/ui/unused_must_use.rs:11:5
   |
11 |     Foo::new();
   |     ^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/unused_must_use.rs:1:9
   |
1  | #![deny(unused_must_use)]
   |         ^^^^^^^^^^^^^^^
help: use `let _ = ...` to ignore the resulting value
   |
11 |     let _ = Foo::new();
   |     +++++++

error: unused return value of `Foo::with_a` that must be used
  --> tests/ui/unused_must_use.rs:12:5
   |
12 |     Foo::new().with_a(0);
   |     ^^^^^^^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
12 |     let _ = Foo::new().with_a(0);
   |     +++++++

error: unused return value of `Foo::a` that must be used
  --> tests/ui/unused_must_use.rs:13:5
   |
13 |     Foo::new().a();
   |     ^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
13 |     let _ = Foo::new().a();
   |     +++++++

error: unused return value of `Foo::from_bytes` that must be used
  --> tests/ui/unused_must_use.rs:14:5
   |
14 |     Foo::from_bytes([0]);
   |     ^^^^^^^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
14 |     let _ = Foo::from_bytes([0]);
   |     +++++++
